# chat2md

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: dependencies.py  routes.py  schemas.py
app/application/: __init__.py  dto.py  export_options.py  export_service.py  export_task.py  task_service.py
app/common/: __init__.py  exceptions.py  logging.py  utils.py
app/config/: __init__.py  settings.py
app/domain/: value_objects.py
app/domain/model/: __init__.py  attachment.py  block.py  conversation.py  image_resource.py  knowledge_document.py
app/domain/parser/: __init__.py  base.py  context.py  interface.py  registry.py
app/domain/repository/: __init__.py  interfaces.py
app/domain/service/: __init__.py  interfaces.py
app/infrastructure/: __init__.py
app/infrastructure/client/: __init__.py  http_client.py
app/infrastructure/downloader/: __init__.py  aiohttp_downloader.py
app/infrastructure/exporter/: __init__.py  markdown_exporter.py
app/infrastructure/parser/: __init__.py  chatgpt.py  doubao.py  gemini.py  gemini_playwright_parser.py  playwright_parser.py
app/infrastructure/parser/adapters/: __init__.py  chatgpt_adapter.py
app/infrastructure/repository/: __init__.py  file_task_repo.py  in_memory_conversation_repo.py  in_memory_task_repo.py
app/mcp/: server.py
docs/: USAGE.md  architecture_phase1.md  architecture_phase2.md
templates/: index.html
tests/integration/: test_export_api.py  test_parsers.py
tests/unit/api/: __init__.py  test_schemas.py
tests/unit/application/: __init__.py  test_export_service.py  test_export_task.py  test_file_task_repository.py  test_task_service.py
tests/unit/client/: __init__.py  test_http_client.py
tests/unit/common/: __init__.py  test_exceptions.py  test_utils.py
tests/unit/domain/: test_block.py  test_conversation.py  test_image_resource.py  test_knowledge_document.py
tests/unit/downloader/: __init__.py  test_aiohttp_downloader.py
tests/unit/exporter/: test_markdown_exporter.py
tests/unit/parser/: test_base_parser.py  test_chatgpt_adapter.py  test_chatgpt_parser.py  test_registry.py
